* Fri Jul 27 2001 Matt Domsch <Matt_Domsch@dell.com>
- Added test for running as root	
- released v0.3.3-test3

* Thu Jul 26 2001 Matt Domsch <Matt_Domsch@dell.com>
- Unparse extra args being passed to bootloader too.
- released v0.3.3-test2

* Wed Jul 25 2001 Matt Domsch <Matt_Domsch@dell.com>
- Added -u option to pass extra args to the bootloader in unicode
  (default is to pass in ASCII)
- Added -t option to allow writing to a file (for testing)
- released v0.3.3-test1

* Tue May 22 2001 Matt Domsch <Matt_Domsch@dell.com>
- Applied patch from Andreas Schwab.  remove_from_boot_order() called
  read_boot_order() without checking the return status.
- Changed README to remove os loader args comment
- Changed efi_status_t to be unsigned long (not uint64_t) as per EFI
  spec.  This allows efibootmgr to be recompiled as a 32-bit or 64-bit app
  depending on its running on 32-bit or 64-bit Linux.  Note:  this changes
  the size of the structure returned in /proc/efi/vars to match the kernel
  implementation.  32-bit efibootmgr won't work on 64-bit Linux and vice versa.
- release v0.3.2	

	
* Fri May 18 2001 Matt Domsch <Matt_Domsch@dell.com>
- changed usage() to *not* let you think you can pass args to the OS
  loader
- release v0.3.1	

* Fri May 18 2001 Matt Domsch <Matt_Domsch@dell.com>
- Padded HARDDRIVE_DEVICE_PATH out to please EFI Boot Manager.
- Incorporated patches from Andreas Schwab
  - replace __u{8,16,32,64} with uint{8,16,32,64}_t
  - use _FILE_OFFSET_BITS
  - fix a segfault
- release v0.3.0	

* Tue May 15 2001 Matt Domsch <Matt_Domsch@dell.com>
- initial external release v0.2.0