@@ -3,7 +3,7 @@
   RELEASE_DATE := "27-July-2001"	
   RELEASE_MAJOR := 0
   RELEASE_MINOR := 3
-  RELEASE_SUBLEVEL := 3-test3
+  RELEASE_SUBLEVEL := 3-test4
   RELEASE_EXTRALEVEL := 
   RELEASE_NAME := efibootmgr
   RELEASE_STRING := $(RELEASE_NAME)-$(RELEASE_MAJOR).$(RELEASE_MINOR).$(RELEASE_SUBLEVEL)$(RELEASE_EXTRALEVEL)
